implemented a basic order state machine, state changes are published via socket.io interface
